made button links, added profile and settings to top bar, added images

--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
 	<body>
         <div id="content">
             <header>
-            App name!
+                {APP NAME GOES HERE}
+                <a href="#">
+                    Profile
+                </a>
+                <a href="#">
+                    Settings
+                </a>
             </header>
-            <div id="today">
-                today
-            </div>
-            <div id="tomorrow">
-                tomorrow
-            </div>
-            <div id="progress">
-                lol
-            </div>
+            <a href="#" class="button" id="today">
+                <img src="cal.png">
+                <h1>TODAY</h1>
+            </a>
+            <a href="#" class="button" id="tomorrow">
+                <img src="cal.png">
+                <h1>TOMORROW</h1>
+            </a>
+            <a href="#" class="button" id="progress">
+                <img src="cal.png">
+                <h1>PROGRESS</h1>
+            </a>
         </div>
 	</body>
-
 </html>
