changed color, updated images, changed layout

--- a/static/index.html
+++ b/static/index.html
@@ -8,26 +8,35 @@
 	<body>
         <div id="content">
             <header>
-                {APP NAME}
-                <a href="#">
-                    Profile
+                Goaly
+                <a id="settings" href="#">
+                    <img src="icons/gear.svg">
                 </a>
-                <a href="#">
-                    Settings
+                <a id="profile" href="#">
+                    <img src="icons/user.svg">
                 </a>
             </header>
+            <div id="pane">
             <a href="#" class="button" id="today">
-                <img src="cal.png">
+                <img src="icons/cal5.svg">
                 <h1>TODAY</h1>
             </a>
             <a href="#" class="button" id="tomorrow">
-                <img src="cal.png">
+                <img src="icons/cal6.svg">
                 <h1>TOMORROW</h1>
             </a>
             <a href="#" class="button" id="progress">
-                <img src="cal.png">
+                <img src="icons/graph.svg">
                 <h1>PROGRESS</h1>
             </a>
+            <a href="#" class="button" id="progress">
+                <img src="icons/help.svg">
+                <h1>HELP</h1>
+            </a>
+            </div>
+            <div id="footer">
+                x means times
+            </div>
         </div>
 	</body>
 </html>
