--- a/static/index.html
+++ b/static/index.html
@@ -17,19 +17,19 @@
                 </a>
             </header>
             <div id="pane">
-            <a href="#" class="button" id="today">
+            <a href="today.html" class="button" id="today">
                 <img src="icons/cal5.svg">
                 <h1>TODAY</h1>
             </a>
-            <a href="#" class="button" id="tomorrow">
+            <a href="tomorrow.html" class="button" id="tomorrow">
                 <img src="icons/cal6.svg">
                 <h1>TOMORROW</h1>
             </a>
-            <a href="#" class="button" id="progress">
+            <a href="progress.html" class="button" id="progress">
                 <img src="icons/graph.svg">
                 <h1>PROGRESS</h1>
             </a>
-            <a href="#" class="button" id="progress">
+            <a href="help.html" class="button" id="progress">
                 <img src="icons/help.svg">
                 <h1>HELP</h1>
             </a>
