Profile and settings template

--- a/static/index.html
+++ b/static/index.html
@@ -9,10 +9,10 @@
         <div id="content">
             <header>
                 Goaly
-                <a id="settings" href="#">
+                <a id="settings" href="settings.html">
                     <img src="icons/gear.svg">
                 </a>
-                <a id="profile" href="#">
+                <a id="profile" href="profile.html">
                     <img src="icons/user.svg">
                 </a>
             </header>
