changing around some of the pages

--- a/static/today.html
+++ b/static/today.html
@@ -16,39 +16,19 @@
                 </a>
             </header>
             <div id="pane">
-                <h1>Tomorrow</h1>
-                    <a id="homebutton" href="index.html">
-                        home
-                    </a>
-                <h2>Add Goals</h2>
-                <div class="select_wrapper">
-                <select>
-                    <option value="volvo">Run 1 Mile</option>
-                    <option value="saab">Go to the Gym</option>
-                    <option value="mercedes">CSE 170 Homework</option>
-                    <option value="audi">Take out the Trash</option>
-                </select>
+                <a id="homebutton" href="index.html">
+                    home
+                </a>
+                <h2>Today's Goals</h2>
+                <div id="goals">
+                <form action="demo_form.asp" method="get">
+                    Run 1 Mile <input type="checkbox" name="vehicle" value="Bike"><br>
+                    Do the Laundry <input type="checkbox" name="vehicle" value="Car" checked><br>
+                    Do the Dishes <input type="checkbox" name="vehicle" value="Bike"><br>
+                    Call Mom <input type="checkbox" name="vehicle" value="Bike"><br>
+                    <input type="submit" value="Submit">
+                </form>
                 </div>
-                <h2>Add Reminder</h2>
-                <div class="select_wrapper">
-                <select>
-                    <option value="08">8:00 AM</option>
-                    <option value="09">9:00 AM</option>
-                    <option value="10">10:00 AM</option>
-                    <option value="11">11:00 AM</option>
-                    <option value="12">12:00 PM</option>
-                    <option value="13">1:00 PM</option>
-                    <option value="14">2:00 PM</option>
-                    <option value="15">3:00 PM</option>
-                    <option value="16">4:00 PM</option>
-                    <option value="17">5:00 PM</option>
-                    <option value="18">6:00 PM</option>
-                    <option value="19">7:00 PM</option>
-                </select>
-                </div>
-                <a id="homebutton" href="submit.html">
-                        submit
-                 </a>
             </div>
 
             <div id="footer">
