--- a/static/tomorrow.html
+++ b/static/tomorrow.html
@@ -8,7 +8,6 @@
 	<body>
         <div id="content">
             <header>
-                Tomorrow
                 <a id="settings" href="#">
                     <img src="icons/gear.svg">
                 </a>
@@ -17,10 +16,39 @@
                 </a>
             </header>
             <div id="pane">
-            <a href="index.html" class="button" id="home">
-                <img src="icons/homebutton.svg">
-                <h1>HOME</h1>
-            </a>
+                <h1>Tomorrow</h1>
+                    <a id="homebutton" href="index.html">
+                        home
+                    </a>
+                <h2>Add Goals</h2>
+                <div class="select_wrapper">
+                <select>
+                    <option value="volvo">Run 1 Mile</option>
+                    <option value="saab">Go to the Gym</option>
+                    <option value="mercedes">CSE 170 Homework</option>
+                    <option value="audi">Take out the Trash</option>
+                </select>
+                </div>
+                <h2>Add Reminder</h2>
+                <div class="select_wrapper">
+                <select>
+                    <option value="08">8:00 AM</option>
+                    <option value="09">9:00 AM</option>
+                    <option value="10">10:00 AM</option>
+                    <option value="11">11:00 AM</option>
+                    <option value="12">12:00 PM</option>
+                    <option value="13">1:00 PM</option>
+                    <option value="14">2:00 PM</option>
+                    <option value="15">3:00 PM</option>
+                    <option value="16">4:00 PM</option>
+                    <option value="17">5:00 PM</option>
+                    <option value="18">6:00 PM</option>
+                    <option value="19">7:00 PM</option>
+                </select>
+                </div>
+                <a id="homebutton" href="submit.html">
+                        submit
+                 </a>
             </div>
 
             <div id="footer">
