--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
             </a>
             </div>
             <div id="footer">
-                x means times
+                x means times- or does it
             </div>
         </div>
 	</body>
