Minor navigation changes and fixes

--- a/static/profile.html
+++ b/static/profile.html
@@ -9,12 +9,10 @@
         <div id="content">
             <header>
                 Profile
-                <a id="settings" href="#">
+                <a id="settings" href="settings.html">
                     <img src="icons/gear.svg">
                 </a>
-                <a id="profile" href="#">
-                    <img src="icons/user.svg">
-                </a>
+                
             </header>
             <div id="pane">
             <a href="index.html" class="button" id="home">
