--- a/static/progress.html
+++ b/static/progress.html
@@ -8,11 +8,11 @@
 	<body>
         <div id="content">
             <header>
-                Help
-                <a id="settings" href="#">
+                Progress
+                <a id="settings" href="settings.html">
                     <img src="icons/gear.svg">
                 </a>
-                <a id="profile" href="#">
+                <a id="profile" href="profile.html">
                     <img src="icons/user.svg">
                 </a>
             </header>
