--- a/static/settings.html
+++ b/static/settings.html
@@ -9,10 +9,8 @@
         <div id="content">
             <header>
                 Settings
-                <a id="settings" href="#">
-                    <img src="icons/gear.svg">
-                </a>
-                <a id="profile" href="#">
+                
+                <a id="profile" href="profile.html">
                     <img src="icons/user.svg">
                 </a>
             </header>
