--- a/static/today.html
+++ b/static/today.html
@@ -8,10 +8,10 @@
 	<body>
         <div id="content">
             <header>
-                <a id="settings" href="#">
+                <a id="settings" href="settings.html">
                     <img src="icons/gear.svg">
                 </a>
-                <a id="profile" href="#">
+                <a id="profile" href="profile.html">
                     <img src="icons/user.svg">
                 </a>
             </header>
